--- a/FileNavigatorLite/URLS.plist
+++ b/FileNavigatorLite/URLS.plist
@@ -9,10 +9,16 @@
 	<key>Item 2</key>
 	<string>https://wolverine.raywenderlich.com/books/con/image-from-rawpixel-id-466821-jpeg.jpg</string>
 	<key>New item</key>
-	<string>file:///Users/marinmir/Downloads/%D0%A3%D1%81%D1%82%D0%B0%D0%B2%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%B0.pdf</string>
+	<string>https://www.xeroxscanners.com/downloads/Manuals/XMS/PDF_Converter_Pro_Quick_Reference_Guide.RU.pdf</string>
 	<key>New item - 2</key>
-	<string>https://s1.stc.all.kpcdn.net/putevoditel/projectid_103889/images/tild3433-3361-4231-b364-643366613265__20170525_gaf_u40_567.jpg</string>
+	<string>https://www.ridus.ru/images/2018/6/8/776041/main_slider_8638e85ef3.jpg</string>
 	<key>New item - 3</key>
-	<string>https://images.unsplash.com/photo-1590233183626-b14c6b5de8e9?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=668&amp;q=80</string>
+	<string>https://businka.org/uploads/images/00/36/26/2020/01/09/25192c.jpg</string>
+	<key>New item - 4</key>
+	<string>https://sun9-10.userapi.com/c834402/v834402927/dd34e/YpyyLH7VWWU.jpg</string>
+	<key>New item - 5</key>
+	<string>https://irecommend.ru/sites/default/files/imagecache/copyright1/user-images/1147290/ScdWSWbViXIOr9HaLjzig.JPG</string>
+	<key>New item - 6</key>
+	<string>https://83.img.avito.st/640x480/8313049483.jpg</string>
 </dict>
 </plist>
