--- a/FileNavigatorLite/URLS.plist
+++ b/FileNavigatorLite/URLS.plist
@@ -2,11 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Item 0</key>
-	<string>https://wolverine.raywenderlich.com/books/con/image-from-rawpixel-id-466780-jpeg.jpg</string>
-	<key>Item 1</key>
-	<string>https://wolverine.raywenderlich.com/books/con/image-from-rawpixel-id-466818-jpeg.jpg</string>
-	<key>Item 2</key>
-	<string>https://wolverine.raywenderlich.com/books/con/image-from-rawpixel-id-466821-jpeg.jpg</string>
+    <key>Item 0</key>
+    <string>https://wolverine.raywenderlich.com/books/con/image-from-rawpixel-id-466780-jpeg.jpg</string>
+    <key>Item 1</key>
+    <string>https://wolverine.raywenderlich.com/books/con/image-from-rawpixel-id-466818-jpeg.jpg</string>
+    <key>Item 2</key>
+    <string>https://wolverine.raywenderlich.com/books/con/image-from-rawpixel-id-466821-jpeg.jpg</string>
+    <key>New item</key>
+    <string>https://www.xeroxscanners.com/downloads/Manuals/XMS/PDF_Converter_Pro_Quick_Reference_Guide.RU.pdf</string>
+    <key>New item - 2</key>
+    <string>https://www.ridus.ru/images/2018/6/8/776041/main_slider_8638e85ef3.jpg</string>
+    <key>New item - 3</key>
+    <string>https://businka.org/uploads/images/00/36/26/2020/01/09/25192c.jpg</string>
+    <key>New item - 4</key>
+    <string>https://sun9-10.userapi.com/c834402/v834402927/dd34e/YpyyLH7VWWU.jpg</string>
+    <key>New item - 5</key>
+    <string>https://irecommend.ru/sites/default/files/imagecache/copyright1/user-images/1147290/ScdWSWbViXIOr9HaLjzig.JPG</string>
+    <key>New item - 6</key>
+    <string>https://83.img.avito.st/640x480/8313049483.jpg</string>
 </dict>
 </plist>
